Fixed a minor layout problem with categories being not centered in multiple choice

--- a/src/App.css
+++ b/src/App.css
@@ -42,6 +42,10 @@ margin-top:10px;
  position:center;
 }
 
+.centered{
+  position:center;
+}
+
 .multipleChoice{
   display:flex;
   flex-direction:column;
